# my_horrible_rust_program

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
