[package]
name = "my_horrible_rust_program"
version = "0.1.0"
authors = ["hapash. <boymintyfresh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# README.md 
[dependencies]
libc = "0.2.95"
regex = "1.5"
http = "0.2.4"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
tokio = { version = "1.5.0", features = ["full"] }
structopt = "0.3.19"
clap = { version = "2.33.3", features = ["yaml"] }
unicode-segmentation = "1.7.1"
scraper = "0.12.0"